[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = "0.27.0"
indexmap = "2.2.6"
ratatui = { version = "0.26.2", features = ["all-widgets"] }

[[bin]]
name = "todo"
path = "src/main.rs"
